# woodpecker-prototype

./: Cargo.toml  README.md  build.rs
benches/: cast.rs  parser.rs  parser_writer.rs  simple.rs  writer.rs
proto/: woodpecker.proto
src/: client.rs  error.rs  functional_test.rs  integration_test.rs  lib.rs  resource_util.rs  server.rs
src/agent/: agent.rs  client.rs  integration_test.rs  key_repository.rs  mod.rs  presigned_url_repository.rs  server.rs  tailer.rs  uploader.rs
src/agent/client/: agent.rs  mod.rs  tailer.rs  uploader.rs
src/agent/server/: mod.rs  server.rs
src/agent_service/: mod.rs
src/data/: blob_store.rs  mod.rs  pub_sub.rs
src/ingress/: mod.rs  parser.rs  schema.rs  server.rs  writer.rs
src/query/: mod.rs  query.rs
src/query/forked/: mod.rs  parquet_exec.rs  parquet_table.rs
src/serde/: ingress_task.rs  mod.rs
testinput/: example.csv  example.parquet
tests/: localstack.rs
