[package]
name = "prototype"
version = "0.1.0"
authors = ["Jack Chan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "3.0.0", features = ["prettyprint"] }
async-stream = "0.3.0"
async-trait = "0.1"
env_logger = "0.8"
futures = "0.3.13"
log = "0.4"
parquet = "3.0.0"
prost = "0.7.0"
regex = "1"
rusoto_core = "0.46.0"
rusoto_credential = "0.46.0"
rusoto_s3 = "0.46.0"
rusoto_sqs = "0.46.0"
same-file = "1.0.6"
tempfile = "3.2.0"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.4.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
serial_test = "0.5"
tokio-test = "0.4.0"

[build-dependencies]
tonic-build = "0.4.0"
