[package]
name = "prototype"
version = "0.1.0"
authors = ["Jack Chan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "4.0", features = ["prettyprint"] }
async-stream = "0.3"
async-trait = "0.1"
bytes = "1.0"
chrono = "0.4"
datafusion = "4.0"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
parquet = "4.0"
prost = "0.7"
regex = "1"
reqwest = "0.11"
rusoto_core = "0.46"
rusoto_credential = "0.46"
rusoto_dynamodb = "0.46"
rusoto_s3 = "0.46"
rusoto_sqs = "0.46"
same-file = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_dynamodb = "0.7"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
criterion = "0.3"
serial_test = "0.5"
tempfile = "3.2"
tokio-test = "0.4"
warp = "0.3"

[build-dependencies]
tonic-build = "0.4"

[[bin]]
name = "log-gen"
path = "src/bin/log_gen.rs"

[[bench]]
name = "simple"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "writer"
harness = false

[[bench]]
name = "parser_writer"
harness = false

[[bench]]
name = "cast"
harness = false
